k8s/whisperx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisperx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisperx
  template:
    metadata:
      labels:
        app: whisperx
    spec:
      containers:
        - name: whisperx
          image: ghcr.io/mobility-scooter-project/model-service/whisperx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: model-cache
              mountPath: /app/.cache
      volumes:
        - name: model-cache
          persistentVolumeClaim:
            claimName: whisperx-cache-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: whisperx-svc
spec:
  selector:
    app: whisperx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
