k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: api-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/whisperx
      - /api/v1/yolo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: model-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-api-strip-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/whisperx/
            pathType: Prefix
            backend:
              service:
                name: whisperx-svc
                port: 
                  number: 8000
    - http:
        paths:
          - path: /api/v1/yolo/
            pathType: Prefix
            backend:
              service:
                name: yolo-svc
                port: 
                  number: 8000
